// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VDatePicker.js should match snapshot with allowed dates as array 1`] = `

<tbody>
  <tr>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span class="btn__content">
          Jan
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat btn--disabled"
      >
        <span class="btn__content">
          Feb
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span class="btn__content">
          Mar
        </span>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--flat btn--disabled"
      >
        <span class="btn__content">
          Apr
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--active accent"
      >
        <span class="btn__content">
          May
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat btn--disabled"
      >
        <span class="btn__content">
          Jun
        </span>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span class="btn__content">
          Jul
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat btn--disabled"
      >
        <span class="btn__content">
          Aug
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat btn--disabled"
      >
        <span class="btn__content">
          Sep
        </span>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--flat btn--disabled"
      >
        <span class="btn__content">
          Oct
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat btn--disabled"
      >
        <span class="btn__content">
          Nov
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat btn--disabled"
      >
        <span class="btn__content">
          Dec
        </span>
      </button>
    </td>
  </tr>
</tbody>

`;

exports[`VDatePicker.js should match snapshot with colored picker 1`] = `

<div class="picker picker--date card"
     style="height: auto;"
     data-ripple="false"
>
  <div class="picker__title orange darken-1">
    <div class="date-picker-title">
      <div class="picker__title__btn date-picker-title__year">
        2005
      </div>
      <div class="picker__title__btn date-picker-title__date active">
        <div>
          November
        </div>
      </div>
    </div>
  </div>
  <div class="picker__body">
    <div>
      <div class="date-picker-header">
        <button type="button"
                class="btn btn--icon"
                data-ripple="true"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="icon material-icons"
            >
              chevron_left
            </i>
          </div>
        </button>
        <div class="date-picker-header__value">
          <strong class="primary--text">
            2005
          </strong>
        </div>
        <button type="button"
                class="btn btn--icon"
                data-ripple="true"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="icon material-icons"
            >
              chevron_right
            </i>
          </div>
        </button>
      </div>
      <div class="date-picker-table date-picker-table--month">
        <table>
          <tbody>
            <tr>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Jan
                  </span>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Feb
                  </span>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Mar
                  </span>
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Apr
                  </span>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    May
                  </span>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Jun
                  </span>
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Jul
                  </span>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Aug
                  </span>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Sep
                  </span>
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Oct
                  </span>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--active primary"
                >
                  <span class="btn__content">
                    Nov
                  </span>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Dec
                  </span>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>

`;

exports[`VDatePicker.js should match snapshot with colored picker 2`] = `

<div class="picker picker--date card"
     style="height: auto;"
     data-ripple="false"
>
  <div class="picker__title orange darken-1">
    <div class="date-picker-title">
      <div class="picker__title__btn date-picker-title__year">
        2005
      </div>
      <div class="picker__title__btn date-picker-title__date active">
        <div>
          November
        </div>
      </div>
    </div>
  </div>
  <div class="picker__body">
    <div>
      <div class="date-picker-header">
        <button type="button"
                class="btn btn--icon"
                data-ripple="true"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="icon material-icons"
            >
              chevron_left
            </i>
          </div>
        </button>
        <div class="date-picker-header__value">
          <strong class="orange--text text--darken-1">
            2005
          </strong>
        </div>
        <button type="button"
                class="btn btn--icon"
                data-ripple="true"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="icon material-icons"
            >
              chevron_right
            </i>
          </div>
        </button>
      </div>
      <div class="date-picker-table date-picker-table--month">
        <table>
          <tbody>
            <tr>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Jan
                  </span>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Feb
                  </span>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Mar
                  </span>
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Apr
                  </span>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    May
                  </span>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Jun
                  </span>
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Jul
                  </span>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Aug
                  </span>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Sep
                  </span>
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Oct
                  </span>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--active orange darken-1"
                >
                  <span class="btn__content">
                    Nov
                  </span>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Dec
                  </span>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>

`;

exports[`VDatePicker.js should match snapshot with month formatting functions 1`] = `

<tbody>
  <tr>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span class="btn__content">
          (01)
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span class="btn__content">
          (02)
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span class="btn__content">
          (03)
        </span>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span class="btn__content">
          (04)
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span class="btn__content">
          (05)
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span class="btn__content">
          (06)
        </span>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span class="btn__content">
          (07)
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span class="btn__content">
          (08)
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span class="btn__content">
          (09)
        </span>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span class="btn__content">
          (10)
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--active accent"
      >
        <span class="btn__content">
          (11)
        </span>
      </button>
    </td>
    <td>
      <button type="button"
              class="btn btn--flat"
      >
        <span class="btn__content">
          (12)
        </span>
      </button>
    </td>
  </tr>
</tbody>

`;

exports[`VDatePicker.js should match snapshot with pick-month prop 1`] = `

<div class="picker picker--date card"
     style="height: auto;"
     data-ripple="false"
>
  <div class="picker__title primary">
    <div class="date-picker-title">
      <div class="picker__title__btn date-picker-title__year">
        2013
      </div>
      <div class="picker__title__btn date-picker-title__date active">
        <div>
          May
        </div>
      </div>
    </div>
  </div>
  <div class="picker__body">
    <div>
      <div class="date-picker-header">
        <button type="button"
                class="btn btn--icon"
                data-ripple="true"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="icon material-icons"
            >
              chevron_left
            </i>
          </div>
        </button>
        <div class="date-picker-header__value">
          <strong class="accent--text">
            2013
          </strong>
        </div>
        <button type="button"
                class="btn btn--icon"
                data-ripple="true"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="icon material-icons"
            >
              chevron_right
            </i>
          </div>
        </button>
      </div>
      <div class="date-picker-table date-picker-table--month">
        <table>
          <tbody>
            <tr>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Jan
                  </span>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Feb
                  </span>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Mar
                  </span>
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Apr
                  </span>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--active accent"
                >
                  <span class="btn__content">
                    May
                  </span>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Jun
                  </span>
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Jul
                  </span>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Aug
                  </span>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Sep
                  </span>
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Oct
                  </span>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Nov
                  </span>
                </button>
              </td>
              <td>
                <button type="button"
                        class="btn btn--flat"
                >
                  <span class="btn__content">
                    Dec
                  </span>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>

`;
